ProjetoBase/compilador.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 $@3: %empty

    5 bloco: parte_declara_vars $@2 proc_com $@3 comando_composto

    6 $@4: %empty

    7 bloco: parte_declara_vars $@4 comando_composto

    8 $@5: %empty

    9 $@6: %empty

   10 proc_com: PROCEDURE IDENT $@5 PONTO_E_VIRGULA $@6 blocoProc PONTO_E_VIRGULA

   11 $@7: %empty

   12 blocoProc: parte_declara_vars $@7 proc_com comando_composto

   13 $@8: %empty

   14 blocoProc: parte_declara_vars $@8 comando_composto

   15 parte_declara_vars: var

   16 $@9: %empty

   17 var: $@9 VAR declara_vars
   18    | %empty

   19 declara_vars: declara_vars declara_var
   20             | declara_var

   21 $@10: %empty

   22 declara_var: lista_id_var DOIS_PONTOS tipo $@10 PONTO_E_VIRGULA

   23 tipo: IDENT

   24 lista_id_var: lista_id_var VIRGULA IDENT
   25             | IDENT

   26 lista_idents: lista_idents VIRGULA IDENT
   27             | IDENT

   28 comando_composto: T_BEGIN comandos_total T_END

   29 comandos_total: comandos

   30 comandos: comandos comando
   31         | comando

   32 $@11: %empty

   33 $@12: %empty

   34 comando: IDENT $@11 ATRIBUICAO expressao_simples $@12 PONTO_E_VIRGULA
   35        | comando_write
   36        | cond_if
   37        | comando_repetitivo
   38        | comando_procedure

   39 $@13: %empty

   40 comando_procedure: IDENT $@13 PONTO_E_VIRGULA
   41                  | IDENT ABRE_PARENTESES FECHA_PARENTESES PONTO_E_VIRGULA

   42 expressao_simples: expressao_simples SOMA termo
   43                  | expressao_simples SUB termo
   44                  | termo

   45 termo: termo MUL fator
   46      | termo DIV fator
   47      | fator

   48 fator: ABRE_PARENTESES expressao_simples FECHA_PARENTESES
   49      | IDENT
   50      | NUMERO

   51 $@14: %empty

   52 comando_write: WRITE ABRE_PARENTESES IDENT $@14 FECHA_PARENTESES PONTO_E_VIRGULA
   53              | WRITE ABRE_PARENTESES NUMERO FECHA_PARENTESES PONTO_E_VIRGULA

   54 cond_if: if_then cond_else

   55 $@15: %empty

   56 if_then: IF expressao $@15 THEN internal

   57 $@16: %empty

   58 cond_else: ELSE $@16 internal
   59          | %empty

   60 internal: comando
   61         | T_BEGIN comandos T_END PONTO_E_VIRGULA

   62 comando_repetitivo: com_while

   63 $@17: %empty

   64 $@18: %empty

   65 com_while: $@17 WHILE expressao $@18 DO internal

   66 expressao: ABRE_PARENTESES prior2 FECHA_PARENTESES

   67 prior2: prior2 IGUAL prior1
   68       | prior2 DIFE prior1
   69       | prior1

   70 prior1: prior1 MAIOR final
   71       | prior1 MENOR final
   72       | prior1 MAEG final
   73       | prior1 MEEG final
   74       | final

   75 final: IDENT
   76      | NUMERO


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 41 48 52 53 66
FECHA_PARENTESES (260) 2 41 48 52 53 66
WRITE (261) 52 53
VIRGULA (262) 24 26
PONTO_E_VIRGULA (263) 2 10 22 34 40 41 52 53 61
DOIS_PONTOS (264) 22
PONTO (265) 2
T_BEGIN (266) 28 61
T_END (267) 28 61
VAR (268) 17
IDENT (269) 2 10 23 24 25 26 27 34 40 41 49 52 75
ATRIBUICAO (270) 34
NUMERO (271) 50 53 76
SOMA (272) 42
SUB (273) 43
MUL (274) 45
DIV (275) 46
IF (276) 56
THEN (277) 56
ELSE (278) 58
WHILE (279) 65
DO (280) 65
DIFE (281) 68
IGUAL (282) 67
MAEG (283) 72
MAIOR (284) 70
MENOR (285) 71
MEEG (286) 73
PROCEDURE (287) 10
LOWER_THAN_ELSE (288)


Não-terminais com as regras onde eles aparecem

$accept (34)
    à esquerda: 0
programa (35)
    à esquerda: 2, à direita: 0
$@1 (36)
    à esquerda: 1, à direita: 2
bloco (37)
    à esquerda: 5 7, à direita: 2
$@2 (38)
    à esquerda: 3, à direita: 5
$@3 (39)
    à esquerda: 4, à direita: 5
$@4 (40)
    à esquerda: 6, à direita: 7
proc_com (41)
    à esquerda: 10, à direita: 5 12
$@5 (42)
    à esquerda: 8, à direita: 10
$@6 (43)
    à esquerda: 9, à direita: 10
blocoProc (44)
    à esquerda: 12 14, à direita: 10
$@7 (45)
    à esquerda: 11, à direita: 12
$@8 (46)
    à esquerda: 13, à direita: 14
parte_declara_vars (47)
    à esquerda: 15, à direita: 5 7 12 14
var (48)
    à esquerda: 17 18, à direita: 15
$@9 (49)
    à esquerda: 16, à direita: 17
declara_vars (50)
    à esquerda: 19 20, à direita: 17 19
declara_var (51)
    à esquerda: 22, à direita: 19 20
$@10 (52)
    à esquerda: 21, à direita: 22
tipo (53)
    à esquerda: 23, à direita: 22
lista_id_var (54)
    à esquerda: 24 25, à direita: 22 24
lista_idents (55)
    à esquerda: 26 27, à direita: 2 26
comando_composto (56)
    à esquerda: 28, à direita: 5 7 12 14
comandos_total (57)
    à esquerda: 29, à direita: 28
comandos (58)
    à esquerda: 30 31, à direita: 29 30 61
comando (59)
    à esquerda: 34 35 36 37 38, à direita: 30 31 60
$@11 (60)
    à esquerda: 32, à direita: 34
$@12 (61)
    à esquerda: 33, à direita: 34
comando_procedure (62)
    à esquerda: 40 41, à direita: 38
$@13 (63)
    à esquerda: 39, à direita: 40
expressao_simples (64)
    à esquerda: 42 43 44, à direita: 34 42 43 48
termo (65)
    à esquerda: 45 46 47, à direita: 42 43 44 45 46
fator (66)
    à esquerda: 48 49 50, à direita: 45 46 47
comando_write (67)
    à esquerda: 52 53, à direita: 35
$@14 (68)
    à esquerda: 51, à direita: 52
cond_if (69)
    à esquerda: 54, à direita: 36
if_then (70)
    à esquerda: 56, à direita: 54
$@15 (71)
    à esquerda: 55, à direita: 56
cond_else (72)
    à esquerda: 58 59, à direita: 54
$@16 (73)
    à esquerda: 57, à direita: 58
internal (74)
    à esquerda: 60 61, à direita: 56 58 65
comando_repetitivo (75)
    à esquerda: 62, à direita: 37
com_while (76)
    à esquerda: 65, à direita: 62
$@17 (77)
    à esquerda: 63, à direita: 65
$@18 (78)
    à esquerda: 64, à direita: 65
expressao (79)
    à esquerda: 66, à direita: 56 65
prior2 (80)
    à esquerda: 67 68 69, à direita: 66 67 68
prior1 (81)
    à esquerda: 70 71 72 73 74, à direita: 67 68 69 70 71 72 73
final (82)
    à esquerda: 75 76, à direita: 70 71 72 73 74


State 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


State 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


State 3

    0 $accept: programa $end .

    $padrão  aceitar


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


State 7

   27 lista_idents: IDENT .

    $padrão  reduzir usando a regra 27 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   26 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


State 10

   26 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR       reduzir usando a regra 16 ($@9)
    $padrão  reduzir usando a regra 18 (var)

    bloco               ir ao estado 13
    parte_declara_vars  ir ao estado 14
    var                 ir ao estado 15
    $@9                 ir ao estado 16


State 12

   26 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 26 (lista_idents)


State 13

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 17


State 14

    5 bloco: parte_declara_vars . $@2 proc_com $@3 comando_composto
    7      | parte_declara_vars . $@4 comando_composto

    T_BEGIN   reduzir usando a regra 6 ($@4)
    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 18
    $@4  ir ao estado 19


State 15

   15 parte_declara_vars: var .

    $padrão  reduzir usando a regra 15 (parte_declara_vars)


State 16

   17 var: $@9 . VAR declara_vars

    VAR  deslocar, e ir ao estado 20


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


State 18

    5 bloco: parte_declara_vars $@2 . proc_com $@3 comando_composto

    PROCEDURE  deslocar, e ir ao estado 21

    proc_com  ir ao estado 22


State 19

    7 bloco: parte_declara_vars $@4 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 23

    comando_composto  ir ao estado 24


State 20

   17 var: $@9 VAR . declara_vars

    IDENT  deslocar, e ir ao estado 25

    declara_vars  ir ao estado 26
    declara_var   ir ao estado 27
    lista_id_var  ir ao estado 28


State 21

   10 proc_com: PROCEDURE . IDENT $@5 PONTO_E_VIRGULA $@6 blocoProc PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 29


State 22

    5 bloco: parte_declara_vars $@2 proc_com . $@3 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 30


State 23

   28 comando_composto: T_BEGIN . comandos_total T_END

    WRITE  deslocar, e ir ao estado 31
    IDENT  deslocar, e ir ao estado 32
    IF     deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comandos_total      ir ao estado 34
    comandos            ir ao estado 35
    comando             ir ao estado 36
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 24

    7 bloco: parte_declara_vars $@4 comando_composto .

    $padrão  reduzir usando a regra 7 (bloco)


State 25

   25 lista_id_var: IDENT .

    $padrão  reduzir usando a regra 25 (lista_id_var)


State 26

   17 var: $@9 VAR declara_vars .
   19 declara_vars: declara_vars . declara_var

    IDENT  deslocar, e ir ao estado 25

    $padrão  reduzir usando a regra 17 (var)

    declara_var   ir ao estado 44
    lista_id_var  ir ao estado 28


State 27

   20 declara_vars: declara_var .

    $padrão  reduzir usando a regra 20 (declara_vars)


State 28

   22 declara_var: lista_id_var . DOIS_PONTOS tipo $@10 PONTO_E_VIRGULA
   24 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 45
    DOIS_PONTOS  deslocar, e ir ao estado 46


State 29

   10 proc_com: PROCEDURE IDENT . $@5 PONTO_E_VIRGULA $@6 blocoProc PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 8 ($@5)

    $@5  ir ao estado 47


State 30

    5 bloco: parte_declara_vars $@2 proc_com $@3 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 23

    comando_composto  ir ao estado 48


State 31

   52 comando_write: WRITE . ABRE_PARENTESES IDENT $@14 FECHA_PARENTESES PONTO_E_VIRGULA
   53              | WRITE . ABRE_PARENTESES NUMERO FECHA_PARENTESES PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 49


State 32

   34 comando: IDENT . $@11 ATRIBUICAO expressao_simples $@12 PONTO_E_VIRGULA
   40 comando_procedure: IDENT . $@13 PONTO_E_VIRGULA
   41                  | IDENT . ABRE_PARENTESES FECHA_PARENTESES PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 50

    PONTO_E_VIRGULA  reduzir usando a regra 39 ($@13)
    $padrão         reduzir usando a regra 32 ($@11)

    $@11  ir ao estado 51
    $@13  ir ao estado 52


State 33

   56 if_then: IF . expressao $@15 THEN internal

    ABRE_PARENTESES  deslocar, e ir ao estado 53

    expressao  ir ao estado 54


State 34

   28 comando_composto: T_BEGIN comandos_total . T_END

    T_END  deslocar, e ir ao estado 55


State 35

   29 comandos_total: comandos .
   30 comandos: comandos . comando

    WRITE  deslocar, e ir ao estado 31
    IDENT  deslocar, e ir ao estado 32
    IF     deslocar, e ir ao estado 33

    WHILE     reduzir usando a regra 63 ($@17)
    $padrão  reduzir usando a regra 29 (comandos_total)

    comando             ir ao estado 56
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 36

   31 comandos: comando .

    $padrão  reduzir usando a regra 31 (comandos)


State 37

   38 comando: comando_procedure .

    $padrão  reduzir usando a regra 38 (comando)


State 38

   35 comando: comando_write .

    $padrão  reduzir usando a regra 35 (comando)


State 39

   36 comando: cond_if .

    $padrão  reduzir usando a regra 36 (comando)


State 40

   54 cond_if: if_then . cond_else

    ELSE  deslocar, e ir ao estado 57

    $padrão  reduzir usando a regra 59 (cond_else)

    cond_else  ir ao estado 58


State 41

   37 comando: comando_repetitivo .

    $padrão  reduzir usando a regra 37 (comando)


State 42

   62 comando_repetitivo: com_while .

    $padrão  reduzir usando a regra 62 (comando_repetitivo)


State 43

   65 com_while: $@17 . WHILE expressao $@18 DO internal

    WHILE  deslocar, e ir ao estado 59


State 44

   19 declara_vars: declara_vars declara_var .

    $padrão  reduzir usando a regra 19 (declara_vars)


State 45

   24 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 60


State 46

   22 declara_var: lista_id_var DOIS_PONTOS . tipo $@10 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 61

    tipo  ir ao estado 62


State 47

   10 proc_com: PROCEDURE IDENT $@5 . PONTO_E_VIRGULA $@6 blocoProc PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 63


State 48

    5 bloco: parte_declara_vars $@2 proc_com $@3 comando_composto .

    $padrão  reduzir usando a regra 5 (bloco)


State 49

   52 comando_write: WRITE ABRE_PARENTESES . IDENT $@14 FECHA_PARENTESES PONTO_E_VIRGULA
   53              | WRITE ABRE_PARENTESES . NUMERO FECHA_PARENTESES PONTO_E_VIRGULA

    IDENT   deslocar, e ir ao estado 64
    NUMERO  deslocar, e ir ao estado 65


State 50

   41 comando_procedure: IDENT ABRE_PARENTESES . FECHA_PARENTESES PONTO_E_VIRGULA

    FECHA_PARENTESES  deslocar, e ir ao estado 66


State 51

   34 comando: IDENT $@11 . ATRIBUICAO expressao_simples $@12 PONTO_E_VIRGULA

    ATRIBUICAO  deslocar, e ir ao estado 67


State 52

   40 comando_procedure: IDENT $@13 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 68


State 53

   66 expressao: ABRE_PARENTESES . prior2 FECHA_PARENTESES

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    prior2  ir ao estado 71
    prior1  ir ao estado 72
    final   ir ao estado 73


State 54

   56 if_then: IF expressao . $@15 THEN internal

    $padrão  reduzir usando a regra 55 ($@15)

    $@15  ir ao estado 74


State 55

   28 comando_composto: T_BEGIN comandos_total T_END .

    $padrão  reduzir usando a regra 28 (comando_composto)


State 56

   30 comandos: comandos comando .

    $padrão  reduzir usando a regra 30 (comandos)


State 57

   58 cond_else: ELSE . $@16 internal

    $padrão  reduzir usando a regra 57 ($@16)

    $@16  ir ao estado 75


State 58

   54 cond_if: if_then cond_else .

    $padrão  reduzir usando a regra 54 (cond_if)


State 59

   65 com_while: $@17 WHILE . expressao $@18 DO internal

    ABRE_PARENTESES  deslocar, e ir ao estado 53

    expressao  ir ao estado 76


State 60

   24 lista_id_var: lista_id_var VIRGULA IDENT .

    $padrão  reduzir usando a regra 24 (lista_id_var)


State 61

   23 tipo: IDENT .

    $padrão  reduzir usando a regra 23 (tipo)


State 62

   22 declara_var: lista_id_var DOIS_PONTOS tipo . $@10 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 21 ($@10)

    $@10  ir ao estado 77


State 63

   10 proc_com: PROCEDURE IDENT $@5 PONTO_E_VIRGULA . $@6 blocoProc PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 9 ($@6)

    $@6  ir ao estado 78


State 64

   52 comando_write: WRITE ABRE_PARENTESES IDENT . $@14 FECHA_PARENTESES PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 51 ($@14)

    $@14  ir ao estado 79


State 65

   53 comando_write: WRITE ABRE_PARENTESES NUMERO . FECHA_PARENTESES PONTO_E_VIRGULA

    FECHA_PARENTESES  deslocar, e ir ao estado 80


State 66

   41 comando_procedure: IDENT ABRE_PARENTESES FECHA_PARENTESES . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 81


State 67

   34 comando: IDENT $@11 ATRIBUICAO . expressao_simples $@12 PONTO_E_VIRGULA

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    expressao_simples  ir ao estado 85
    termo              ir ao estado 86
    fator              ir ao estado 87


State 68

   40 comando_procedure: IDENT $@13 PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 40 (comando_procedure)


State 69

   75 final: IDENT .

    $padrão  reduzir usando a regra 75 (final)


State 70

   76 final: NUMERO .

    $padrão  reduzir usando a regra 76 (final)


State 71

   66 expressao: ABRE_PARENTESES prior2 . FECHA_PARENTESES
   67 prior2: prior2 . IGUAL prior1
   68       | prior2 . DIFE prior1

    FECHA_PARENTESES  deslocar, e ir ao estado 88
    DIFE              deslocar, e ir ao estado 89
    IGUAL             deslocar, e ir ao estado 90


State 72

   69 prior2: prior1 .
   70 prior1: prior1 . MAIOR final
   71       | prior1 . MENOR final
   72       | prior1 . MAEG final
   73       | prior1 . MEEG final

    MAEG   deslocar, e ir ao estado 91
    MAIOR  deslocar, e ir ao estado 92
    MENOR  deslocar, e ir ao estado 93
    MEEG   deslocar, e ir ao estado 94

    $padrão  reduzir usando a regra 69 (prior2)


State 73

   74 prior1: final .

    $padrão  reduzir usando a regra 74 (prior1)


State 74

   56 if_then: IF expressao $@15 . THEN internal

    THEN  deslocar, e ir ao estado 95


State 75

   58 cond_else: ELSE $@16 . internal

    WRITE    deslocar, e ir ao estado 31
    T_BEGIN  deslocar, e ir ao estado 96
    IDENT    deslocar, e ir ao estado 32
    IF       deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comando             ir ao estado 97
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    internal            ir ao estado 98
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 76

   65 com_while: $@17 WHILE expressao . $@18 DO internal

    $padrão  reduzir usando a regra 64 ($@18)

    $@18  ir ao estado 99


State 77

   22 declara_var: lista_id_var DOIS_PONTOS tipo $@10 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 100


State 78

   10 proc_com: PROCEDURE IDENT $@5 PONTO_E_VIRGULA $@6 . blocoProc PONTO_E_VIRGULA

    VAR       reduzir usando a regra 16 ($@9)
    $padrão  reduzir usando a regra 18 (var)

    blocoProc           ir ao estado 101
    parte_declara_vars  ir ao estado 102
    var                 ir ao estado 15
    $@9                 ir ao estado 16


State 79

   52 comando_write: WRITE ABRE_PARENTESES IDENT $@14 . FECHA_PARENTESES PONTO_E_VIRGULA

    FECHA_PARENTESES  deslocar, e ir ao estado 103


State 80

   53 comando_write: WRITE ABRE_PARENTESES NUMERO FECHA_PARENTESES . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 104


State 81

   41 comando_procedure: IDENT ABRE_PARENTESES FECHA_PARENTESES PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 41 (comando_procedure)


State 82

   48 fator: ABRE_PARENTESES . expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    expressao_simples  ir ao estado 105
    termo              ir ao estado 86
    fator              ir ao estado 87


State 83

   49 fator: IDENT .

    $padrão  reduzir usando a regra 49 (fator)


State 84

   50 fator: NUMERO .

    $padrão  reduzir usando a regra 50 (fator)


State 85

   34 comando: IDENT $@11 ATRIBUICAO expressao_simples . $@12 PONTO_E_VIRGULA
   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo

    SOMA  deslocar, e ir ao estado 106
    SUB   deslocar, e ir ao estado 107

    $padrão  reduzir usando a regra 33 ($@12)

    $@12  ir ao estado 108


State 86

   44 expressao_simples: termo .
   45 termo: termo . MUL fator
   46      | termo . DIV fator

    MUL  deslocar, e ir ao estado 109
    DIV  deslocar, e ir ao estado 110

    $padrão  reduzir usando a regra 44 (expressao_simples)


State 87

   47 termo: fator .

    $padrão  reduzir usando a regra 47 (termo)


State 88

   66 expressao: ABRE_PARENTESES prior2 FECHA_PARENTESES .

    $padrão  reduzir usando a regra 66 (expressao)


State 89

   68 prior2: prior2 DIFE . prior1

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    prior1  ir ao estado 111
    final   ir ao estado 73


State 90

   67 prior2: prior2 IGUAL . prior1

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    prior1  ir ao estado 112
    final   ir ao estado 73


State 91

   72 prior1: prior1 MAEG . final

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    final  ir ao estado 113


State 92

   70 prior1: prior1 MAIOR . final

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    final  ir ao estado 114


State 93

   71 prior1: prior1 MENOR . final

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    final  ir ao estado 115


State 94

   73 prior1: prior1 MEEG . final

    IDENT   deslocar, e ir ao estado 69
    NUMERO  deslocar, e ir ao estado 70

    final  ir ao estado 116


State 95

   56 if_then: IF expressao $@15 THEN . internal

    WRITE    deslocar, e ir ao estado 31
    T_BEGIN  deslocar, e ir ao estado 96
    IDENT    deslocar, e ir ao estado 32
    IF       deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comando             ir ao estado 97
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    internal            ir ao estado 117
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 96

   61 internal: T_BEGIN . comandos T_END PONTO_E_VIRGULA

    WRITE  deslocar, e ir ao estado 31
    IDENT  deslocar, e ir ao estado 32
    IF     deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comandos            ir ao estado 118
    comando             ir ao estado 36
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 97

   60 internal: comando .

    $padrão  reduzir usando a regra 60 (internal)


State 98

   58 cond_else: ELSE $@16 internal .

    $padrão  reduzir usando a regra 58 (cond_else)


State 99

   65 com_while: $@17 WHILE expressao $@18 . DO internal

    DO  deslocar, e ir ao estado 119


State 100

   22 declara_var: lista_id_var DOIS_PONTOS tipo $@10 PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 22 (declara_var)


State 101

   10 proc_com: PROCEDURE IDENT $@5 PONTO_E_VIRGULA $@6 blocoProc . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 120


State 102

   12 blocoProc: parte_declara_vars . $@7 proc_com comando_composto
   14          | parte_declara_vars . $@8 comando_composto

    T_BEGIN   reduzir usando a regra 13 ($@8)
    $padrão  reduzir usando a regra 11 ($@7)

    $@7  ir ao estado 121
    $@8  ir ao estado 122


State 103

   52 comando_write: WRITE ABRE_PARENTESES IDENT $@14 FECHA_PARENTESES . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 123


State 104

   53 comando_write: WRITE ABRE_PARENTESES NUMERO FECHA_PARENTESES PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 53 (comando_write)


State 105

   42 expressao_simples: expressao_simples . SOMA termo
   43                  | expressao_simples . SUB termo
   48 fator: ABRE_PARENTESES expressao_simples . FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 124
    SOMA              deslocar, e ir ao estado 106
    SUB               deslocar, e ir ao estado 107


State 106

   42 expressao_simples: expressao_simples SOMA . termo

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    termo  ir ao estado 125
    fator  ir ao estado 87


State 107

   43 expressao_simples: expressao_simples SUB . termo

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    termo  ir ao estado 126
    fator  ir ao estado 87


State 108

   34 comando: IDENT $@11 ATRIBUICAO expressao_simples $@12 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 127


State 109

   45 termo: termo MUL . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    fator  ir ao estado 128


State 110

   46 termo: termo DIV . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 82
    IDENT            deslocar, e ir ao estado 83
    NUMERO           deslocar, e ir ao estado 84

    fator  ir ao estado 129


State 111

   68 prior2: prior2 DIFE prior1 .
   70 prior1: prior1 . MAIOR final
   71       | prior1 . MENOR final
   72       | prior1 . MAEG final
   73       | prior1 . MEEG final

    MAEG   deslocar, e ir ao estado 91
    MAIOR  deslocar, e ir ao estado 92
    MENOR  deslocar, e ir ao estado 93
    MEEG   deslocar, e ir ao estado 94

    $padrão  reduzir usando a regra 68 (prior2)


State 112

   67 prior2: prior2 IGUAL prior1 .
   70 prior1: prior1 . MAIOR final
   71       | prior1 . MENOR final
   72       | prior1 . MAEG final
   73       | prior1 . MEEG final

    MAEG   deslocar, e ir ao estado 91
    MAIOR  deslocar, e ir ao estado 92
    MENOR  deslocar, e ir ao estado 93
    MEEG   deslocar, e ir ao estado 94

    $padrão  reduzir usando a regra 67 (prior2)


State 113

   72 prior1: prior1 MAEG final .

    $padrão  reduzir usando a regra 72 (prior1)


State 114

   70 prior1: prior1 MAIOR final .

    $padrão  reduzir usando a regra 70 (prior1)


State 115

   71 prior1: prior1 MENOR final .

    $padrão  reduzir usando a regra 71 (prior1)


State 116

   73 prior1: prior1 MEEG final .

    $padrão  reduzir usando a regra 73 (prior1)


State 117

   56 if_then: IF expressao $@15 THEN internal .

    $padrão  reduzir usando a regra 56 (if_then)


State 118

   30 comandos: comandos . comando
   61 internal: T_BEGIN comandos . T_END PONTO_E_VIRGULA

    WRITE  deslocar, e ir ao estado 31
    T_END  deslocar, e ir ao estado 130
    IDENT  deslocar, e ir ao estado 32
    IF     deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comando             ir ao estado 56
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 119

   65 com_while: $@17 WHILE expressao $@18 DO . internal

    WRITE    deslocar, e ir ao estado 31
    T_BEGIN  deslocar, e ir ao estado 96
    IDENT    deslocar, e ir ao estado 32
    IF       deslocar, e ir ao estado 33

    $padrão  reduzir usando a regra 63 ($@17)

    comando             ir ao estado 97
    comando_procedure   ir ao estado 37
    comando_write       ir ao estado 38
    cond_if             ir ao estado 39
    if_then             ir ao estado 40
    internal            ir ao estado 131
    comando_repetitivo  ir ao estado 41
    com_while           ir ao estado 42
    $@17                ir ao estado 43


State 120

   10 proc_com: PROCEDURE IDENT $@5 PONTO_E_VIRGULA $@6 blocoProc PONTO_E_VIRGULA .
